force-app/main/default/objects/Financial_Summary_Report__c/Financial_Summary_Report__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom setting to store filter dates on financial summary report.</description>
    <label>Financial Summary Report</label>
</CustomObject>