force-app/main/default/objects/Financial_Summary_Report__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <description>Date when batch job is run to calculate accrued interest on financial summary custom report.</description>
    <label>Report Date</label>
    <type>Date</type>
</CustomField>