force-app/main/default/objects/Financial_Summary_Report__c/fields/Since_Inception__c.field-meta.xml
<CustomField>
    <fullName>Since_Inception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Since Inception</label>
    <type>Checkbox</type>
</CustomField>